--- a/index.html
+++ b/index.html
@@ -46,8 +46,18 @@
     <section class="hero">
         <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="hero-btn">Заказать услугу</button>
-        </div>
+           
+            <!-- Modal-window -->
+            <button data-modal-open type="button" class="hero-btn" >Заказать услугу</button>
+
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, neque.
+                    </p>
+                    <button data-modal-close>Закрыть</button>
+                </div>
+            </div>
     </section>
      <!-- Преимущества -->
     <section class="section">
@@ -378,5 +388,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
