--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
 
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, neque.
+                    <p class="send-modal-text">
+                        Оставьте свои данные, мы вам перезвоним
                     </p>
-                    <button data-modal-close>Закрыть</button>
+                    <button class="close-modal" data-modal-close>
+                        <svg class="close-modal-icon">
+                            <use href="./images/icons.svg#icon-close-box"></use>
+                        </svg>
+                    </button>
+                    <button class="send-modal-icon" data-modal-close>Отправить</button>
                 </div>
             </div>
     </section>
