--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
             <div class="backdrop is-hidden" data-modal>
                 <div class="modal">
-                    <p class="send-modal-text">
+                    <!-- <p class="send-modal-text">
                         Оставьте свои данные, мы вам перезвоним
-                    </p>
+                    </p> -->
                     <button class="close-modal" data-modal-close>
                         <svg class="close-modal-icon">
                             <use href="./images/icons.svg#icon-close-box"></use>
                         </svg>
-                    </button>
-                    <button class="send-modal-icon" data-modal-close>Отправить</button>
+                    <!-- </button>
+                    <button class="send-modal-icon" data-modal-close>Отправить</button> -->
                 </div>
             </div>
     </section>
@@ -117,16 +117,19 @@
                     <img src="./images/pc&tablet.jpg" 
                     alt="планшет и компьютер"
                     width="370">
+                    <p class="works-text">Десктопные приложения</p>
                 </li>
                 <li class="works-item">
                     <img src="./images/phone.jpg"
                     alt="мобильные телефоны"
                     width="370">
+                    <p class="works-text">Мобильные приложения</p>
                 </li>
                 <li class="works-item">
                     <img src="./images/colorspectrum.jpg"
                     alt="графичный дизайн"
                     width="370">
+                    <p class="works-text">Дизайнерские решения</p>
             </ul>
         </div>
     </section>
