--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </ul>
         </div>
     </section>
-    <!-- Мастера -->
+    <!-- Персонал -->
     <section class="section section-masters"> 
         <div class="container">
             <h2 class="section-title masters-title">Наша команда</h2>
