--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
                         <svg class="close-modal-icon">
                             <use href="./images/icons.svg#icon-close-box"></use>
                         </svg>
-                    <!-- </button>
-                    <button class="send-modal-icon" data-modal-close>Отправить</button> -->
+                    </button>
+                    <!-- <button class="send-modal-icon" data-modal-close>Отправить</button> -->
                 </div>
             </div>
+        </div>
     </section>
      <!-- Преимущества -->
     <section class="section">
