--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navigation">
             <a lang="en" href="" class="logo">Web<span class="logo-studio">Studio</span></a>
             <ul class="nav-list list">
-                <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link current">Студия</a></li>
                 <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
             </ul>
